--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "typescript-setup-playground",
   "packageManager": "yarn@4.0.2",
   "devDependencies": {
+    "@types/react": "^18.2.46",
+    "@types/react-dom": "^18.2.18",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
