--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,14 @@
 {
   "compilerOptions": {
-    "outDir": "./dist",
-    "strict": true,
-    "jsx": "react-jsx",
-    "lib": ["ES2020", "DOM", "DOM.Iterable"]
+    "outDir": "./dist", // 컴파일된 파일이 저장될 디렉터리
+    "module": "ESNext", // 어느 모듈 시스템을 사용하는 환경에서 동작하도록 JS 파일을 컴파일할 것인지 설정 (CJS, ES6, ES2020, ESNext 등)
+    "moduleResolution": "Bundler", // [🚨] 모듈을 해석하는 방식을 설정한다는데.. 잘 이해 못했음. 다만, module에 ES방식을 사용하면 이거 설정 바꿔줘야 JSX가 컴파일됨..
+    "lib": ["ES6", "ES2020", "DOM", "DOM.Iterable"], // 빌드에 포함할 타입 선언 파일 목록
+
+    "strict": true, // 모든 엄격한 타입 검사 옵션 활성화
+    "skipLibCheck": true, // 라이브러리 파일의 타입 검사를 건너뛰도록 설정 (이미 받아온 라이브러리를 검사할 필요 없으니 빌드 속도 향상)
+    "esModuleInterop": true, // import React from 'react' 방식으로 임포트할 수 있도록 설정 (이거 안하면 import * as React from 'react' 방식으로 임포트해야 함)
+    "jsx": "react-jsx" // jsx 변환 방식을 React 17 버전부터 사용하는 방식으로 설정
   },
-  "exclude": ["node_modules", "dist"]
+  "include": ["src"] // 컴파일할 파일 목록
 }
