--- a/package.json
+++ b/package.json
@@ -2,10 +2,20 @@
   "name": "typescript-setup-playground",
   "type": "module",
   "packageManager": "yarn@4.0.2",
+  "scripts": {
+    "webpack-build": "node --loader ts-node/esm node_modules/webpack-cli/bin/cli.js --config webpack.config.ts"
+  },
   "devDependencies": {
+    "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
-    "typescript": "^5.3.3"
+    "@types/webpack": "^5.28.5",
+    "@types/webpack-dev-server": "^4.7.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
     "react": "^18.2.0",
