--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "type": "module",
   "packageManager": "yarn@4.0.2",
   "scripts": {
-    "build": "webpack",
-    "dev": "webpack serve"
+    "build": "NODE_ENV=production webpack",
+    "dev": "NODE_ENV=development webpack serve"
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
