--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
   "devDependencies": {
     "@babel/core": "^7.23.7",
     "@babel/preset-env": "^7.23.7",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@types/babel__core": "^7",
     "@types/babel__preset-env": "^7",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
+    "@types/react-refresh": "^0",
     "@types/webpack": "^5.28.5",
     "@types/webpack-dev-server": "^4.7.2",
     "babel-loader": "^9.1.3",
     "core-js": "^3.35.0",
     "html-webpack-plugin": "^5.6.0",
+    "react-refresh": "^0.14.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
     "webpack": "^5.89.0",
