--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/webpack-dev-server": "^4.7.2",
     "babel-loader": "^9.1.3",
     "core-js": "^3.35.0",
+    "dotenv-webpack": "^8.0.1",
     "html-webpack-plugin": "^5.6.0",
     "react-refresh": "^0.14.0",
     "ts-loader": "^9.5.1",
