--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "@types/react-refresh": "^0",
     "@types/webpack": "^5.28.5",
     "@types/webpack-dev-server": "^4.7.2",
+    "autoprefixer": "^10.4.16",
     "babel-loader": "^9.1.3",
     "core-js": "^3.35.0",
     "dotenv-webpack": "^8.0.1",
     "html-webpack-plugin": "^5.6.0",
+    "postcss": "^8.4.33",
     "react-refresh": "^0.14.0",
+    "tailwindcss": "^3.4.1",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
     "webpack": "^5.89.0",
