--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "autoprefixer": "^10.4.16",
     "babel-loader": "^9.1.3",
     "core-js": "^3.35.0",
+    "css-loader": "^6.8.1",
     "dotenv-webpack": "^8.0.1",
     "html-webpack-plugin": "^5.6.0",
     "postcss": "^8.4.33",
+    "postcss-loader": "^7.3.4",
     "react-refresh": "^0.14.0",
+    "style-loader": "^3.3.3",
     "tailwindcss": "^3.4.1",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
