--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "html-webpack-plugin": "^5.6.0",
     "postcss": "^8.4.33",
     "postcss-loader": "^7.3.4",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.4.1",
     "react-refresh": "^0.14.0",
     "style-loader": "^3.3.3",
     "tailwindcss": "^3.4.1",
