--- a/package.json
+++ b/package.json
@@ -12,17 +12,24 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@types/babel__core": "^7",
     "@types/babel__preset-env": "^7",
+    "@types/eslint": "^8",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "@types/react-refresh": "^0",
     "@types/webpack": "^5.28.5",
     "@types/webpack-dev-server": "^4.7.2",
+    "@typescript-eslint/eslint-plugin": "^6.18.0",
+    "@typescript-eslint/parser": "^6.18.0",
     "autoprefixer": "^10.4.16",
     "babel-loader": "^9.1.3",
     "core-js": "^3.35.0",
     "css-loader": "^6.8.1",
     "dotenv-webpack": "^8.0.1",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.6.0",
     "postcss": "^8.4.33",
     "postcss-loader": "^7.3.4",
