--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.6.0",
+    "husky": "^8.0.3",
     "postcss": "^8.4.33",
     "postcss-loader": "^7.3.4",
     "prettier": "^2.8.8",
