--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
     "build": "NODE_ENV=production webpack",
     "dev": "NODE_ENV=development webpack serve"
   },
+  "lint-staged": {
+    "*.{cjs,mjs,js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
+  },
   "devDependencies": {
     "@babel/core": "^7.23.7",
     "@babel/preset-env": "^7.23.7",
@@ -34,6 +40,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.6.0",
     "husky": "^8.0.3",
+    "lint-staged": "^15.2.0",
     "postcss": "^8.4.33",
     "postcss-loader": "^7.3.4",
     "prettier": "^2.8.8",
