--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "packageManager": "yarn@4.0.2",
   "scripts": {
+    "postinstall": "husky install",
     "build": "NODE_ENV=production webpack",
     "dev": "NODE_ENV=development webpack serve"
   },
